<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.prodi.ProdiFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_prodi"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_program_studi"
        android:textColor="@color/primary_blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:text="@string/website_program_studi"
        android:layout_marginTop="50dp"
        android:textColor="@color/primary_blue"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/informatika_button"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/informatika"/>

    <Button
        android:id="@+id/sainsData_button"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sains_data"/>

</FrameLayout>