<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_akademik"
        android:name="com.example.fatisdaprofilemobile.ui.akademik.AkademikFragment"
        android:label="@string/title_akademik"
        tools:layout="@layout/fragment_akademik" />

    <fragment
        android:id="@+id/navigation_kemahasiswaan"
        android:name="com.example.fatisdaprofilemobile.ui.kemahasiswaan.KemahasiswaanFragment"
        android:label="@string/title_kemahasiswaan"
        tools:layout="@layout/fragment_kemahasiswaan" />

    <fragment
        android:id="@+id/navigation_prodi"
        android:name="com.example.fatisdaprofilemobile.ui.prodi.ProdiFragment"
        android:label="@string/prodi"
        tools:layout="@layout/fragment_prodi" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.fatisdaprofilemobile.ui.profil.ProfilFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profil">
        <action
            android:id="@+id/action_profilFragment_to_sejarahFragment"
            app:destination="@id/navigation_sejarah" />
        <action
            android:id="@+id/action_profilFragment_to_VisiMisiTujuanFragment"
            app:destination="@id/navigation_VisiMisiTujuan" />
        <action
            android:id="@+id/action_profilFragment_to_KompetensiFragment"
            app:destination="@id/navigation_Kompetensi" />
        <action
            android:id="@+id/action_profilFragment_to_PengajarFragment"
            app:destination="@id/navigation_Pengajar" />
        <action
            android:id="@+id/action_profilFragment_to_KependidikanFragment"
            app:destination="@id/navigation_Kependidikan" />
    </fragment>

    <fragment
        android:id="@+id/navigation_sejarah"
        android:name="com.example.fatisdaprofilemobile.ui.profil.SejarahFragment"
        android:label="Sejarah Fragment"
        tools:layout="@layout/fragment_text" />

    <fragment
        android:id="@+id/navigation_VisiMisiTujuan"
        android:name="com.example.fatisdaprofilemobile.ui.profil.VisiMisiTujuanFragment"
        android:label="Visi Misi Tujuan Fragment"
        tools:layout="@layout/fragment_text" />

    <fragment
        android:id="@+id/navigation_Kompetensi"
        android:name="com.example.fatisdaprofilemobile.ui.profil.KompetensiFragment"
        android:label="Kompetensi Fragment"
        tools:layout="@layout/fragment_text" />

    <fragment
        android:id="@+id/navigation_Pengajar"
        android:name="com.example.fatisdaprofilemobile.ui.profil.PengajarFragment"
        android:label="Pengajar Fragment"
        tools:layout="@layout/fragment_pengajar" />

    <fragment
        android:id="@+id/navigation_Kependidikan"
        android:name="com.example.fatisdaprofilemobile.ui.profil.KependidikanFragment"
        android:label="Kependidikan Fragment"
        tools:layout="@layout/fragment_text" />
</navigation>